--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1035,6 +1035,9 @@
   .bg-base-200 {
     background-color: var(--color-base-200);
   }
+  .bg-neutral {
+    background-color: var(--color-neutral);
+  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
@@ -1061,6 +1064,22 @@
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
+  }
+  .link-secondary {
+    @layer daisyui.modifier {
+      color: var(--color-secondary);
+      @media (hover: hover) {
+        &:hover {
+          color: var(--color-secondary);
+          @supports (color: color-mix(in lab, red, red)) {
+            color: color-mix(in oklab, var(--color-secondary) 80%, #000);
+          }
+        }
+      }
+    }
+  }
+  .text-primary {
+    color: var(--color-primary);
   }
   .capitalize {
     text-transform: capitalize;
@@ -1122,6 +1141,11 @@
   }
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-2 {
+    @media (width >= 64rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
