added project id search route with route params, and a catch-alll route

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -18,7 +18,7 @@
                 <div class="max-w-md">
                     <h1 class="text-5xl font-bold text-primary">Error: 404</h1>
                     <p class="py-6">
-                        Sorry, we're unable to find what you're looking for.
+                        <%- errorMsg %>
                     </p>
                 </div>
             </div>
