added project ejs file

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,22 +13,7 @@
             <a class="<%= (page == "/about") ? 'bg-neutral' : '' %>" href="/about">About</a>
         </li>
         <li>
-        <details>
-            <summary>
-            Sector
-            </summary>
-            <ul class="p-2 bg-base-100">
-                <li>
-                    <a class="<%= (page == "/solutions/projects") ? 'active' : '' %>" href="/solutions/projects?sector=land sinks">Land Sinks</a>
-                </li>
-                <li>
-                    <a class="<%= (page == "/solutions/projects") ? 'active' : '' %>" href="/solutions/projects?sector=transportation">Transportation</a>
-                </li>
-                <li>
-                    <a class="<%= (page == "/solutions/projects") ? 'active' : '' %>" href="/solutions/projects?sector=ind">Electricity</a>
-                </li>
-            </ul>
-        </details>
+            <a class="<%= (page == "/solutions/projects") ? 'bg-neutral' : '' %>" href="/solutions/projects">View Projects</a>
         </li>
     </ul>
     </div>
@@ -38,20 +23,7 @@
             <a class="<%= (page == "/about") ? 'bg-neutral' : '' %>" href="/about">About</a>
         </li>
         <li>
-            <details>
-            <summary>Sector</summary>
-            <ul class="p-2 bg-base-100 right-0">
-                <li>
-                    <a class="<%= (page == "/solutions/projects") ? 'active' : '' %>" href="/solutions/projects?sector=land sinks">Land Sinks</a>
-                </li>
-                <li>
-                    <a class="<%= (page == "/solutions/projects") ? 'active' : '' %>" href="/solutions/projects?sector=transportation">Transportation</a>
-                </li>
-                <li>
-                    <a class="<%= (page == "/solutions/projects") ? 'active' : '' %>" href="/solutions/projects?sector=ind">Electricity</a>
-                </li>
-            </ul>
-            </details>
+            <a class="<%= (page == "/solutions/projects") ? 'bg-neutral' : '' %>" href="/solutions/projects">View Projects</a>
         </li>
         </ul>
     </div>
