--- a/views/project.ejs
+++ b/views/project.ejs
@@ -10,7 +10,7 @@
     <!-- navbar -->
     <%- include('partials/navbar', {page: '/solutions/projects/:id'}) %>
     <br>
-    <!-- about page content -->
+    <!-- project page content -->
      <div class="container mx-auto">
         <!-- hero component -->
         <div class="hero bg-base-200 rounded-lg p-8">
@@ -35,7 +35,10 @@
                 <p><%= project.impact %></p><br>
                 <h2 class="font-bold text-base">More Information:</h3><br>
                 <p><a class="link" target="_blank" href="<%= project.original_source_url %>"><%= project.original_source_url %></a></p><br>
-                <div id="quote-div"></div><br><br>
+                <div>
+                    <q id="quote"></q>
+                    <p class="italic" id="author"></p>
+                </div><br><br>
                 <a class="btn btn-secondary" href="#" onclick="history.back(); return false;">Return</a>
                 <br>
                 <br>
@@ -46,6 +49,14 @@
     <script>
         document.addEventListener("DOMContentLoaded", ()=>{
         /* TODO: "fetch" the data at: https://dummyjson.com/quotes/random and update an element in the DOM with the "quote" and "author" */
+        fetch("https://dummyjson.com/quotes/random")
+            .then((response) => response.json())
+            .then((data) => {
+                const quote = document.getElementById("quote");
+                const author = document.getElementById("author");
+                quote.textContent = data.quote;
+                author.textContent = `- ${data.author}`;
+            });
         });
     </script>
 </body>
