--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -10,7 +10,7 @@
     <!-- navbar -->
     <%- include('partials/navbar', {page: '/solutions/projects'}) %>
     <br>
-    <!-- home page content -->
+    <!-- projects page content -->
      <div class="container mx-auto">
         <!-- hero component -->
         <div class="hero bg-base-200 rounded-lg p-8">
